# dynoframe

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
dynoframe/: __init__.py  dyno_llamaindex.py  llama_index_compat.py
dynoframe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dynoframe/core/: __init__.py  dyno_agent.py  dyno_agent_with_tools.py  task_complexity.py  team.py
dynoframe/llm/: __init__.py  llm_provider_factory.py  llm_providers.py  openrouter_config.py  openrouter_provider.py
dynoframe/pdf/: __init__.py  pdf_processing_agent.py
dynoframe/rag/: __init__.py  rag_agent.py
